experimental switch function

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,30 +3,14 @@
 @tailwind utilities;
 @import "./view-transitions.css";
 
-.no-scrollbar::-webkit-scrollbar {
+*::-webkit-scrollbar {
   display: none;
 }
 
-.no-scrollbar {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
-
-html {
-  scrollbar-width: none; /* For Firefox */
-  -ms-overflow-style: none; /* For Internet Explorer and Edge */
-}
-
-html::-webkit-scrollbar {
-  display: none; /* For Chrome, Safari, and Opera */
-}
-
-/* Hide scrollbar for other elements */
-.hide-scrollbar {
+* {
+  transition-property: background-color, border-color, color, fill, stroke,
+    opacity, box-shadow;
+  transition-duration: 300ms;
   scrollbar-width: none;
   -ms-overflow-style: none;
-}
-
-.hide-scrollbar::-webkit-scrollbar {
-  display: none;
 }
